<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ForgotPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="@android:dimen/notification_large_icon_height"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="@android:dimen/notification_large_icon_height"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <TextView
            android:id="@+id/txtForgotPasswordTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/share_tech"
            android:gravity="center"
            android:text="@string/txt_forgotPassword_title"
            android:textColor="@color/txt_color"
            android:textSize="@dimen/txt_size_title"
            android:textStyle="bold|italic" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/txtLabelEmailFP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/share_tech"
            android:text="@string/txt_hint_email"
            android:textColor="@color/txt_color"
            android:textSize="@dimen/txt_size_info" />

        <EditText
            android:id="@+id/editTextEmailAddressFP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/share_tech"
            android:hint="@string/txt_hint_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/txt_hint_color" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnSendFP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/btn_bg_color"
            android:fontFamily="@font/share_tech"
            android:text="@string/btn_send"
            android:textColor="@color/txt_color"
            android:textSize="@dimen/txt_size_btn"
            android:textStyle="bold|italic" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnLoginFP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/btn_bg_color"
            android:fontFamily="@font/share_tech"
            android:onClick="goToLogin"
            android:text="@string/txt_login_title"
            android:textColor="@color/txt_color"
            android:textSize="@dimen/txt_size_btn"
            android:textStyle="bold|italic" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>